# yarascanListener

./: .gitignore  Dockerfile  a_mailgrap.py  b_nats2yara.py  c_yaraScan.py  destination.txt  docker-compose.yml  gettototot.py  mailTest.py  main.py  minIO.py  nats2yara.py  ob_nats2yara.py  oc_yaraScan.py  pyproject.toml  pysql.py  requirements.txt  t_graphtoken.py  t_ms_graph.py  t_pysql.py  test.py  test.txt  yaraScan.py
minIO/config/: config.json
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo10  #ib_redo9
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql/outlookScan/: attatchment.ibd  attatchmenttask.ibd  mail.ibd  mail_task.ibd  task.ibd  taskerror.ibd  user_task.ibd  yara_result.ibd
mysql/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  (+107 more)
src/: a_mailgrap.py  b_yaraScanner.py  main.py  mian.py  requirements.txt  t_graphtoken.py  t_minIO.py  t_pysql.py  test.py  yamlReader.py
yaraRule/: rules.yar
(+5 files in other folders)
