
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "QSnake", email = "jester36883688@gmail.com"},
]
dependencies = [
    "commitizen>=3.5.2",
    "minio>=7.1.15",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "yara-python>=4.3.1",
    "uvicorn>=0.22.0",
    "httpx>=0.24.1",
    "nats-py>=2.3.1",
    "mysql-connector-python>=8.0.33",
    "msal>=1.22.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
